--- a/index.html
+++ b/index.html
@@ -1,94 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id" class="scroll-smooth">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Damkar Barito Utara — Informasi & Layanan</title>
-  <meta name="description" content="Informasi layanan Dinas Pemadam Kebakaran & Penyelamatan Kabupaten Barito Utara — Nomor darurat, SOP layanan, tips pencegahan, tutorial, dan wawancara." />
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DAMKAR Barito Utara</title>
+  <!-- Tailwind Config -->
+  <script>
+    tailwind = {
+      config: {
+        darkMode: 'class'
+      }
+    }
+  </script>
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    html { scroll-behavior: smooth; }
-    .glass { background: rgba(255,255,255,0.8); backdrop-filter: blur(6px); }
-    .slider::-webkit-scrollbar { display: none; }
-
-    /* Animasi */
-    @keyframes fadeIn { from {opacity:0; transform: translateY(20px);} to {opacity:1; transform:translateY(0);} }
-    .fade-in { animation: fadeIn 1s ease forwards; opacity:0; }
-
-    @keyframes spinOnce { from { transform: rotate(0deg);} to { transform: rotate(360deg);} }
-    .spin-once { animation: spinOnce 0.5s ease; }
-  </style>
 </head>
-<body class="font-sans text-slate-800 antialiased bg-gray-50 dark:bg-slate-900 dark:text-slate-100 transition-colors duration-500">
-
-  <!-- HEADER -->
-  <header class="bg-white/70 dark:bg-slate-800/80 glass shadow-sm sticky top-0 z-50 transition-colors duration-500">
-    <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
-      <!-- Logo -->
-      <div class="flex items-center gap-3">
-        <img src="asset/Logo.png" alt="Logo Damkar" class="h-10 w-10 object-contain rounded-md" loading="lazy"/>
-        <div>
-          <h1 class="text-lg font-bold text-red-700 dark:text-red-400 transition-colors duration-500">DISDAMKARMAT</h1>
-          <p class="text-xs text-slate-500 dark:text-slate-300 transition-colors duration-500">Kabupaten Barito Utara</p>
-        </div>
-      </div>
-
-      <!-- Navigasi -->
-      <nav class="hidden md:flex items-center gap-6 text-sm font-medium text-slate-700 dark:text-slate-200 transition-colors duration-500">
-        <a href="#sop" class="hover:text-red-600 dark:hover:text-red-400">Informasi</a>
-        <a href="#tips" class="hover:text-red-600 dark:hover:text-red-400">Tips</a>
-        <a href="#tutorial" class="hover:text-red-600 dark:hover:text-red-400">Tutorial</a>
-        <a href="#wawancara" class="hover:text-red-600 dark:hover:text-red-400">Wawancara</a>
-        <a href="#kontak" class="hover:text-red-600 dark:hover:text-red-400">Kontak</a>
+<body class="bg-gray-50 text-gray-900 dark:bg-gray-900 dark:text-gray-100">
+  <!-- Header -->
+  <header class="fixed top-0 w-full bg-white dark:bg-gray-800 shadow z-50">
+    <div class="max-w-7xl mx-auto flex items-center justify-between p-4">
+      <h1 class="text-xl font-bold">DAMKAR Barito Utara</h1>
+      <nav class="space-x-4">
+        <a href="#tips" class="hover:underline">Tips</a>
+        <a href="#video" class="hover:underline">Video</a>
+        <a href="#sosmed" class="hover:underline">Sosmed</a>
       </nav>
-
-      <!-- Toggle -->
-      <button id="darkToggle" class="ml-4 p-2 rounded-md bg-slate-200 dark:bg-slate-700 hover:scale-110 transition">
-        🌞
+      <!-- Dark Mode Toggle -->
+      <button id="darkModeToggle" class="ml-4 p-2 rounded-full bg-gray-200 dark:bg-gray-700">
+        <span>☀️</span>
       </button>
     </div>
   </header>
 
-  <main>
-    <!-- HERO -->
-    <section class="relative text-white py-20 fade-in transition-colors duration-500">
-      <div class="absolute inset-0">
-        <img src="asset/bg.jpg" alt="Background" class="w-full h-full object-cover" loading="lazy">
-        <div class="absolute inset-0 bg-black/50"></div>
-      </div>
-      <div class="relative max-w-3xl mx-auto px-4 text-center">
-        <h2 class="text-4xl font-extrabold tracking-wide">Layanan Darurat DAMKAR</h2>
-        <p class="mt-4 text-lg text-white/90">Hubungi segera jika terjadi kebakaran atau keadaan darurat lainnya.</p>
-        <div class="mt-8 flex flex-col sm:flex-row gap-4 justify-center">
-          <a href="https://wa.me/62811521113" target="_blank" 
-            class="inline-flex items-center justify-center gap-2 bg-red-600 text-white font-semibold px-6 py-4 rounded-xl text-lg shadow hover:bg-red-700 transition">
-            📞 Hubungi Damkar
-          </a>
-          <a href="#sop" 
-            class="inline-flex items-center justify-center gap-2 bg-white text-red-600 font-semibold px-6 py-4 rounded-xl text-lg shadow hover:bg-gray-100 transition">
-            📋 Informasi
-          </a>
-        </div>
-      </div>
-    </section>
+  <!-- Hero -->
+  <section class="pt-24 text-center p-6">
+    <h2 class="text-3xl font-bold mb-4">Lindungi Keluarga dari Bahaya Kebakaran 🔥</h2>
+    <p class="mb-6">Dinas Pemadam Kebakaran dan Penyelamatan Barito Utara</p>
+    <div class="space-x-4">
+      <a href="https://wa.me/62811521113" target="_blank" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg shadow">Hubungi Damkar</a>
+      <a href="#tips" class="bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 px-4 py-2 rounded-lg">Informasi</a>
+    </div>
+  </section>
 
-    <!-- SOP -->
-    <section id="sop" class="max-w-5xl mx-auto px-4 py-12 fade-in transition-colors duration-500">
-      <h3 class="text-xl font-semibold mb-4">Alur Laporan</h3>
-      <p class="text-sm text-slate-600 dark:text-slate-300 mb-6 transition-colors duration-500">Panduan alur pelaporan dari masyarakat ke Damkar.</p>
-      <img src="asset/sop.png" alt="SOP Layanan" class="rounded-xl shadow-md w-full" loading="lazy"/>
-    </section>
-
-    <!-- Tips -->
-    <section id="tips" class="bg-white/70 dark:bg-slate-800/70 glass py-12 fade-in transition-colors duration-500">
-      <div class="max-w-5xl mx-auto px-4">
-        <h3 class="text-xl font-semibold mb-4">Tips Pencegahan Kebakaran</h3>
-        <div class="relative">
-          <div id="tipsSlider" class="flex snap-x overflow-x-auto scroll-smooth">
-            <div class="slide bg-white dark:bg-slate-700 rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3 transition-colors duration-500">
-              <img src="asset/tips1.png" alt="Tips pencegahan singkat" class="rounded-lg w-full" loading="lazy"/>
+  <!-- Tips -->
+  <section id="tips" class="max-w-5xl mx-auto py-12 px-4">
+    <h3 class="text-2xl font-semibold mb-6 text-center">Tips Pencegahan Kebakaran</h3>
+    <div class="grid md:grid-cols-3 gap-6">
+      <div class="bg-white dark:bg-gray-800 rounded-xl shadow p-4">
+        <img src="asset/tips1.png" alt="Tips pencegahan singkat" class="rounded-lg w-full" loading="lazy"/>
             </div>
             <div class="slide bg-white dark:bg-slate-700 rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
               <img src="asset/tips2.png" alt="Kenapa bisa terjadi?" class="rounded-lg w-full" loading="lazy"/>
@@ -111,138 +70,57 @@
             <div class="slide bg-white dark:bg-slate-700 rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
               <img src="asset/tips8.png" alt="Reminder" class="rounded-lg w-full" loading="lazy"/>
             </div>
-          </div>
-          <div id="tipsDots" class="flex justify-center mt-4 gap-2"></div>
         </div>
-      </div>
-    </section>
+  </section>
 
-    <!-- Tutorial -->
-    <section id="tutorial" class="max-w-5xl mx-auto px-4 py-12 fade-in transition-colors duration-500">
-      <h3 class="text-xl font-semibold mb-4">Tutorial Pemadaman</h3>
-      <div class="grid md:grid-cols-2 gap-6">
-        <div class="rounded-xl overflow-hidden shadow">
-          <iframe class="w-full aspect-video" src="https://www.youtube.com/embed/F4DqTCSycKM" title="Tutorial APAR" frameborder="0" allowfullscreen loading="lazy"></iframe>
-        </div>
-        <div class="rounded-xl overflow-hidden shadow">
-          <iframe class="w-full aspect-video" src="https://www.youtube.com/embed/FHMu0wbv7IE" title="Tutorial Handuk Basah" frameborder="0" allowfullscreen loading="lazy"></iframe>
-        </div>
-      </div>
-    </section>
-
-    <!-- Wawancara -->
-    <section id="wawancara" class="bg-white/60 dark:bg-slate-800/60 glass py-12 fade-in transition-colors duration-500">
-      <div class="max-w-5xl mx-auto px-4 text-center">
-        <h3 class="text-xl font-semibold mb-4">Wawancara Pimpinan</h3>
-        <div class="rounded-xl overflow-hidden shadow max-w-2xl mx-auto">
-          <iframe class="w-full aspect-video" src="https://www.youtube.com/embed/VIDEO_ID" title="Wawancara Pimpinan" frameborder="0" allowfullscreen loading="lazy"></iframe>
-        </div>
-      </div>
-    </section>
-
-    <!-- Sosial Media -->
-    <section id="kontak" class="bg-gray-100 dark:bg-slate-800 py-12 fade-in transition-colors duration-500">
-      <div class="max-w-4xl mx-auto px-4 text-center">
-        <h2 class="text-2xl md:text-3xl font-bold mb-6">Ikuti Sosial Media Kami</h2>
-        <div class="grid grid-cols-2 sm:grid-cols-4 gap-6 justify-items-center">
-          <a href="https://www.instagram.com/dinas_damkarmat_baritoutara/" target="_blank" class="flex flex-col items-center gap-2 hover:scale-105 transition">
-            <img src="asset/icon/instagram.svg" alt="Instagram" class="w-8 h-8 dark:invert transition" loading="lazy"/> 
-            <span class="text-sm font-medium">Instagram</span>
-          </a>
-          <a href="https://www.tiktok.com/@105barut" target="_blank" class="flex flex-col items-center gap-2 hover:scale-105 transition">
-            <img src="asset/icon/tiktok.svg" alt="TikTok" class="w-8 h-8 dark:invert transition" loading="lazy"/>
-            <span class="text-sm font-medium">TikTok</span>
-          </a>
-          <a href="https://www.youtube.com/channel/UCzGTH2k2Ob1RfGqaD70YjZw" target="_blank" class="flex flex-col items-center gap-2 hover:scale-105 transition">
-            <img src="asset/icon/youtube.svg" alt="YouTube" class="w-8 h-8 dark:invert transition" loading="lazy"/>
-            <span class="text-sm font-medium">YouTube</span>
-          </a>
-          <a href="https://web.facebook.com/pemadam.kebakaran.37201/" target="_blank" class="flex flex-col items-center gap-2 hover:scale-105 transition">
-            <img src="asset/icon/facebook.svg" alt="Facebook" class="w-8 h-8 dark:invert transition" loading="lazy"/>
-            <span class="text-sm font-medium">Facebook</span>
-          </a>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <!-- FOOTER -->
-  <footer class="mt-12 border-t border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-900 transition-colors duration-500">
-    <div class="max-w-5xl mx-auto px-4 py-6 flex flex-col sm:flex-row items-center justify-between">
-      <p class="text-sm">&copy; 2025 Dinas Pemadam Kebakaran & Penyelamatan Kab. Barito Utara</p>
-      <p class="text-sm text-red-600 dark:text-red-400 font-semibold">WhatsApp 0811-521-113</p>
+  <!-- Video -->
+  <section id="video" class="bg-gray-100 dark:bg-gray-800 py-12 px-4">
+    <h3 class="text-2xl font-semibold mb-6 text-center">Video Tutorial</h3>
+    <div class="max-w-3xl mx-auto aspect-video">
+      <iframe class="w-full h-full rounded-xl shadow"
+        src="https://www.youtube.com/embed/E1h1fQW1Qxg"
+        title="YouTube video" frameborder="0" allowfullscreen></iframe>
     </div>
-  </footer>
+  </section>
 
-  <!-- Floating WhatsApp -->
+  <!-- Sosmed -->
+  <section id="sosmed" class="max-w-5xl mx-auto py-12 px-4 text-center">
+    <h3 class="text-2xl font-semibold mb-6">Ikuti Sosial Media Kami</h3>
+    <div class="flex justify-center space-x-6">
+      <a href="https://www.instagram.com/dinas_damkarmat_baritoutara/" target="_blank" class="flex items-center space-x-2 hover:underline">
+        <img src="asset/icon/instagram.svg" alt="Instagram" class="w-6 h-6 dark:invert">
+        <span>Instagram</span>
+      </a>
+      <a href="https://www.tiktok.com/@105barut" target="_blank" class="flex items-center space-x-2 hover:underline">
+        <img src="asset/icon/tiktok.svg" alt="TikTok" class="w-6 h-6 dark:invert">
+        <span>TikTok</span>
+      </a>
+      <a href="https://www.youtube.com/channel/" target="_blank" class="flex items-center space-x-2 hover:underline">
+        <img src="asset/icon/youtube.svg" alt="YouTube" class="w-6 h-6 dark:invert">
+        <span>YouTube</span>
+      </a>
+    </div>
+  </section>
+
+  <!-- Floating Emergency Button -->
   <a href="https://wa.me/62811521113" target="_blank" 
     class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white shadow-lg rounded-full p-4 flex items-center justify-center animate-bounce z-50"
     title="WhatsApp Darurat">
-    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/whatsapp.svg" alt="WhatsApp" class="w-6 h-6 invert">
+    <img src="asset/icon/whatsapp.svg" alt="WhatsApp" class="w-6 h-6 dark:invert">
   </a>
 
-  <!-- Script -->
+  <!-- Script Toggle -->
   <script>
-    // Slider dots
-    const slider = document.getElementById("tipsSlider");
-    const dots = document.getElementById("tipsDots");
-    const slides = slider.querySelectorAll(".slide");
+    const toggle = document.getElementById('darkModeToggle');
+    const icon = toggle.querySelector('span');
 
-    slides.forEach((_, i) => {
-      const dot = document.createElement("span");
-      dot.className = "w-3 h-3 rounded-full bg-gray-300 inline-block cursor-pointer transition";
-      dot.addEventListener("click", () => {
-        slider.scrollTo({ left: slides[i].offsetLeft, behavior: "smooth" });
-      });
-      dots.appendChild(dot);
-    });
+    toggle.addEventListener('click', () => {
+      document.documentElement.classList.toggle('dark');
 
-    function updateDots() {
-      const index = Math.round(slider.scrollLeft / slides[0].offsetWidth);
-      [...dots.children].forEach((dot, i) => {
-        dot.className =
-          "w-3 h-3 rounded-full inline-block cursor-pointer transition " +
-          (i === index ? "bg-red-600 scale-110" : "bg-gray-300");
-      });
-    }
-    slider.addEventListener("scroll", () => requestAnimationFrame(updateDots));
-    updateDots();
-
-    // Dark mode toggle dengan localStorage + animasi
-    const toggleBtn = document.getElementById("darkToggle");
-    const root = document.documentElement;
-
-    function setTheme(theme) {
-      if (theme === "dark") {
-        root.classList.add("dark");
-        toggleBtn.textContent = "🌙";
+      if (document.documentElement.classList.contains('dark')) {
+        icon.textContent = '🌙'; // Dark mode
       } else {
-        root.classList.remove("dark");
-        toggleBtn.textContent = "🌞";
-      }
-      toggleBtn.classList.add("spin-once");
-      setTimeout(() => toggleBtn.classList.remove("spin-once"), 500);
-      localStorage.setItem("theme", theme);
-    }
-
-    // Load preferensi
-    const savedTheme = localStorage.getItem("theme");
-    if (savedTheme) {
-      setTheme(savedTheme);
-    } else {
-      if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
-        setTheme("dark");
-      } else {
-        setTheme("light");
-      }
-    }
-
-    // Event toggle
-    toggleBtn.addEventListener("click", () => {
-      if (root.classList.contains("dark")) {
-        setTheme("light");
-      } else {
-        setTheme("dark");
+        icon.textContent = '☀️'; // Light mode
       }
     });
   </script>
